docer compose file created for kafka and producer created for test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,1 +1,22 @@
-{ "version": "0.2.0",   "configurations": [     {       "name": "Python Debugger: Django",       "type": "debugpy",       "request": "launch",       "program": "C:\\Users\\User\\Desktop\\CryptoApp\\website\\manage.py",       "args": ["runserver"],       "django": true,       "justMyCode": true     }   ] }
+{
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "Python Debugger: Django",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "C:\\Users\\User\\Desktop\\CryptoApp\\website\\manage.py",
+            "args": [
+                "runserver"
+            ],
+            "django": true,
+            "justMyCode": true
+        },
+        {
+            "name": "Python Debugger: Python File",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${file}"
+        }
+    ]
+}
